# devdash-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
qmlgauges_mcp/: server.py
src/: __init__.py  config.py  server.py
src/tools/: __init__.py  explorer.py  logs.py  screenshot.py  telemetry.py
