[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdash-mcp"
version = "0.2.0"
description = "MCP server for DevDash development - explorer interaction, screenshots, telemetry, and logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
devdash-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
